--- a/netlify.toml
+++ b/netlify.toml
@@ -2,19 +2,19 @@
   command = "npm run build"
   publish = "dist"
 
-# Proxy API vers le backend HTTP (pour éviter Mixed Content)
-[[redirects]]
-  from = "/api/*"
-  to = "http://72.61.102.27:3002/api/:splat"
-  status = 200
-  force = true
-
-# Redirection SPA - toutes les routes vers index.html
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+# Note: Les redirects sont gérés par le fichier _redirects dans public/
+# Ce fichier est généré au build par scripts/generate-redirects.js
+# Il utilise NETLIFY_BACKEND_URL si définie, sinon il ne contient que la redirection SPA
 
 [build.environment]
   NODE_VERSION = "18"
+  # Exclure les fichiers de documentation, le code backend et le build output du scan de secrets
+  SECRETS_SCAN_OMIT_PATHS = "*.md,*.example,*.backup,cellxpert-affiliate-api-settings.json,server/**,dev-dist/**,dist/**"
+  # Ignorer les variables d'environnement standard (faux positifs)
+  SECRETS_SCAN_OMIT_KEYS = "NODE_ENV,DB_NAME,DB_PORT,PORT,DB_USER,VITE_SITE_URL"
+
+# Configuration pour le contexte de production
+[context.production.environment]
+  # Ignorer les variables d'environnement standard (faux positifs) en production
+  SECRETS_SCAN_OMIT_KEYS = "NODE_ENV,DB_NAME,DB_PORT,PORT,DB_USER,VITE_SITE_URL"
 
