Fix: Documentation différences local vs Netlify et configuration proxy

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,21 @@
 
 # Configuration API pour le frontend
 # Sur Netlify, définissez cette variable dans les Environment Variables
-VITE_API_URL=http://72.61.102.27:3002
+VITE_API_URL=YOUR_BACKEND_URL
 
 # Configuration CORS pour le backend
 VITE_SITE_URL=http://localhost:5174,https://votre-site.netlify.app
+
+# Configuration de la base de données (BACKEND uniquement)
+# Ces variables ne sont utilisées que par le serveur backend
+DB_HOST=YOUR_DB_HOST
+DB_USER=YOUR_DB_USER
+DB_PASSWORD=YOUR_DB_PASSWORD
+DB_NAME=YOUR_DB_NAME
+DB_PORT=3306
+
+# Configuration du serveur (BACKEND uniquement)
+PORT=3002
+NODE_ENV=development
+
 
