--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"dev:client": "vite --port 5174",
 		"dev:server": "nodemon --watch server --ext ts --exec \"tsx server/index.ts\"",
 		"server": "tsx server/index.ts",
+		"prebuild": "node scripts/generate-redirects.js",
 		"build": "vite build",
 		"lint": "eslint .",
 		"preview": "vite preview",
