--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ dist-ssr
 .env.local
 .env.production
 .env.development
+.env.backup
 
 # Uploads directory - contains user-uploaded files
 public/uploads/
